# research

.github/workflows/: claude-review.yml
ai+crypto/projects/: bittensor.md
ai+crypto/projects/bittensor/: bittensor.md  consensus.md  demo-commands.md  scenarios.md  slides-bittensor.md  talk-20min.md
ai+crypto/projects/bittensor/bittensor-subnet-demo/: README.md  config.py  miner.py  protocol.py  query.py  requirements.txt  utils.py  validator.py
ai+crypto/projects/bittensor/docs/superpowers/plans/: 2026-04-22-bittensor-slides.md
ai+crypto/projects/bittensor/docs/superpowers/specs/: 2026-04-22-bittensor-slides-design.md
ai+crypto/projects/bittensor/images/mmd/: call-chain.mmd  consensus-params.mmd  fund-flow.mmd  miner-validator.mmd  subnet-lifecycle.mmd
geth-archive-storage/: README.md
geth-cold-storage/: README.md
io_bench/code/: run_bench.bat
qkc_active_user_report/: go.mod  go.sum  main.go
zig_rocksdb/: README.md
zig_rocksdb/code/: build.sh  run.sh  run_bench.sh
zig_rocksdb/code/bench_cpp_rocksdb/: CMakeLists.txt  README.md  main.cpp
zig_rocksdb/code/bench_go_ethleveldb/: go.mod  go.sum  main.go
zig_rocksdb/code/bench_go_leveldb/: go.mod  main.go
zig_rocksdb/code/bench_go_pebble/: go.mod  main.go
zig_rocksdb/code/bench_zig_rocksdb/: bench_rocksdb.zig  bench_rocksdb_mt.zig  build.zig  build.zig.zon
zig_rocksdb/code/bench_zig_rocksdb/src/: main.zig
zig_rocksdb/code/bench_zig_rocksdb_capi/: build.zig  build.zig.zon
zig_rocksdb/code/bench_zig_rocksdb_capi/src/: main.zig
zig_rocksdb/code/cpp/: bench_rocksdb.cpp  bench_rocksdb_mt.cpp
zig_rocksdb/code/go/: bench_leveldb.go  bench_leveldb_mt.go
zig_rocksdb/code/scripts/: build.sh  run.sh  run_bench.sh
zig_rocksdb/code/zig/: README.md  bench_rocksdb_mt.zig  build.zig  main.zig
zig_rocksdb/code/zig/src/: main.zig
